[package]
name = "robocad-rs"
version = "0.1.0"
authors = ["Airat Abdrakov"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/CrackAndDie/robocad-rs"
description = """
Rust library for real and virtual robots.
"""
keywords = ["robotics", "robocad"]
include = ["src/", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bench]]
name = "default"
path = "benches/test.rs"
harness = false
